--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,7 @@ span.block-orange {
 
 /*SECTION THREE*/
 #sec-three {
-  background-image: url(..images/background.svg);
+  background-image: url(../images/background.svg);
   height: 700px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -248,7 +248,7 @@ span.block-orange {
 
 /*SECTION FIVE*/
 #sec-five {
-  background-image: url(../image/background.svg);
+  background-image: url(../images/background.svg);
   background-size: cover;
   background-repeat: no-repeat;
 }
